--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
                 <span class="toggle-icon">▼</span>
             </div>
             <div class="filter-content" id="categoriesFilter">
-                <button class="filter-button" data-filter="categories" data-value="주법">주법</button>
-                <button class="filter-button" data-filter="categories" data-value="빠르기(한배)">빠르기(한배)</button>
-                <button class="filter-button" data-filter="categories" data-value="꾸밈음">꾸밈음</button>
-                <button class="filter-button" data-filter="categories" data-value="음높이">음높이</button>
-                <button class="filter-button" data-filter="categories" data-value="음세기">음세기</button>
-                <button class="filter-button" data-filter="categories" data-value="음표현">음표현</button>
-                <button class="filter-button" data-filter="categories" data-value="표기">표기</button>
+                <button class="filter-button" data-filter="categories" data-value="주법_악상기호">주법</button>
+                <button class="filter-button" data-filter="categories" data-value="빠르기(한배)_악상기호">빠르기(한배)</button>
+                <button class="filter-button" data-filter="categories" data-value="장식음(꾸밈음)_악상기호">꾸밈음</button>
+                <button class="filter-button" data-filter="categories" data-value="장식(꾸밈음)_악상기호">꾸밈음</button>
+                <button class="filter-button" data-filter="categories" data-value="부호_악상기호">부호</button>
+                <button class="filter-button" data-filter="categories" data-value="음정(가락)_악상기호">음정(가락)</button>
+                <button class="filter-button" data-filter="categories" data-value="악상기호">악상기호</button>
+                <button class="filter-button" data-filter="categories" data-value="당피리:세피리_악상기호">당피리:세피리</button>
             </div>
         </div>
 
