fix: load dynamic

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>한국 전통 음악 악상기호 필터</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -41,14 +42,7 @@
                 <span class="toggle-icon">▼</span>
             </div>
             <div class="filter-content" id="categoriesFilter">
-                <button class="filter-button" data-filter="categories" data-value="주법_악상기호">주법</button>
-                <button class="filter-button" data-filter="categories" data-value="빠르기(한배)_악상기호">빠르기(한배)</button>
-                <button class="filter-button" data-filter="categories" data-value="장식음(꾸밈음)_악상기호">꾸밈음</button>
-                <button class="filter-button" data-filter="categories" data-value="장식(꾸밈음)_악상기호">꾸밈음</button>
-                <button class="filter-button" data-filter="categories" data-value="부호_악상기호">부호</button>
-                <button class="filter-button" data-filter="categories" data-value="음정(가락)_악상기호">음정(가락)</button>
-                <button class="filter-button" data-filter="categories" data-value="악상기호">악상기호</button>
-                <button class="filter-button" data-filter="categories" data-value="당피리:세피리_악상기호">당피리:세피리</button>
+                <!-- 동적으로 생성됩니다 -->
             </div>
         </div>
 
@@ -59,15 +53,7 @@
                 <span class="toggle-icon">▼</span>
             </div>
             <div class="filter-content" id="instrumentsFilter">
-                <button class="filter-button" data-filter="instruments" data-value="장구">장구</button>
-                <button class="filter-button" data-filter="instruments" data-value="대금">대금</button>
-                <button class="filter-button" data-filter="instruments" data-value="아쟁">아쟁</button>
-                <button class="filter-button" data-filter="instruments" data-value="피리">피리</button>
-                <button class="filter-button" data-filter="instruments" data-value="해금">해금</button>
-                <button class="filter-button" data-filter="instruments" data-value="가야금">가야금</button>
-                <button class="filter-button" data-filter="instruments" data-value="거문고">거문고</button>
-                <button class="filter-button" data-filter="instruments" data-value="당피리,세피리">당피리, 세피리</button>
-                <button class="filter-button" data-filter="instruments" data-value="기타">기타</button>
+                <!-- 동적으로 생성됩니다 -->
             </div>
         </div>
 
