fix: update user ui

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
         <div class="name-section">
             <h3>Name</h3>
             <div class="name-content">
-                <div class="name-icon">🚫</div>
-                <p class="name-description">북편과 채편을 동시 연주한다.</p>
+                <div class="name-icon-container">
+                    <img id="nameIcon" class="name-icon-image" src="" alt="" style="display: none;">
+                    <div id="nameIconFallback" class="name-icon-fallback">🚫</div>
+                </div>
+                <p class="name-description">선택된 악상기호가 없습니다.</p>
             </div>
         </div>
 
