--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- 검색 바 -->
         <div class="search-section">
             <div class="search-container">
-                <div class="search-icon">🔍</div>
+                <img src="Resources/Images/magnifying-glass.png" alt="검색" class="search-icon">
                 <input type="text" id="searchInput" placeholder="Place Holder" class="search-input">
             </div>
         </div>
@@ -34,7 +34,7 @@
                     <img id="nameIcon" class="name-icon-image" src="" alt="" style="display: none;">
                     <div id="nameIconFallback" class="name-icon-fallback">🚫</div>
                 </div>
-                <p class="name-description">선택된 악상기호가 없습니다.</p>
+                <p class="name-description">북편과 채편을 동시 연주한다.</p>
             </div>
         </div>
 
