--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img id="nameIcon" class="name-icon-image" src="" alt="" style="display: none;">
                     <div id="nameIconFallback" class="name-icon-fallback">🚫</div>
                 </div>
-                <p class="name-description">북편과 채편을 동시 연주한다.</p>
+                <p class="name-description">선택된 악상기호가 없습니다.</p>
             </div>
         </div>
 
