fix: advanced korean search engine

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <script src="data-parser.js"></script>
-    <script src="search-engine.js"></script>
+    <script src="korean-search-engine.js"></script>
     <script src="vst-bridge.js"></script>
     <script src="app.js"></script>
 </body>
